# pikpakcli_rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  config_example.yml
.github/workflows/: ci.yaml  release.yaml
src/: args.rs  config.rs  lib.rs  logger.rs  main.rs
src/cli/: download.rs  list.rs  mod.rs
src/pikpak/: captcha_token.rs  download.rs  file.rs  folder.rs  login.rs  mod.rs
src/utils/: file.rs  path.rs
