[package]
name = "pikpakcli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for PikPak"
authors = ["booiris, <booiris02@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
fern = "0.6"
humantime = "2.1"
anyhow = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
] }
md5 = "0.7.0"
serde_json = "1.0"
path-clean = "1.0"
chrono = "0.4"
colored = "2.1"
humansize = "2.1"
futures = "0.3"
async-recursion = "1.0"
itertools = "0.12"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "stream"]
optional = true

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
